update: new functions, cumulative logit model

--- a/README.Rmd
+++ b/README.Rmd
@@ -23,7 +23,7 @@ We provide selection, and/or smoothing/fusion of ordinally scaled independent va
 Also, ANOVA with ordered factors is provided by the function `ordAOV`; testing for differentially expressed genes can be done using `ordGene`. For details cf. Gertheiss (2014) and Sweeney et al. (2015), respectively.
 
 For smoothing, selection and fusion, details may be found in Tutz and Gertheiss (2014, 2016). 
-All functions are documented in detail in `vignette("ordPens", package = "ordPens")`. For smoothing only, the package also builds a bridge to `mgcv::gam()`, see Gertheiss et al. (2021) for further information.
+All functions are documented in detail in `vignette("ordPens", package = "ordPens")`. For smoothing only, the package also builds a bridge to `mgcv::gam()`, see Gertheiss et al. (2022) for further information.
 
 For the function implementing nonlinear principal components analysis, `ordPCA`, details can be found in Hoshiyar et al. (2021) and `vignette("ordPCA", package = "ordPens")`.
 
@@ -80,11 +80,11 @@ Please note that the `ordPens` package is released with a [Contributor Code of C
 
 * Gertheiss, J. (2014). ANOVA for factors with ordered levels. *Journal of Agricultural, Biological and Environmental Statistics 19*, 258-277.
 
-* Gertheiss, J., F. Scheipl, T. Lauer, and H. Ehrhardt (2021). Statistical inference for ordinal predictors in generalized linear and additive models with application to bronchopulmonary dysplasia. Preprint, available from https://arxiv.org/abs/2102.01946.
+* Gertheiss, J., F. Scheipl, T. Lauer, and H. Ehrhardt (2022). Statistical inference for ordinal predictors in generalized linear and additive models with application to bronchopulmonary dysplasia. *BMC research notes 15*, 112.  
 
 * Hoshiyar, A., H.A.L. Kiers, and J. Gertheiss (2021). Penalized non-linear principal components analysis for ordinal variables with an application to international classification of functioning core sets. *British Journal of Mathematical and Statistical Psychology 76*, 353-371.
 
-* Hoshiyar, A., Gertheiss, L.H., Spiller, A. and Gertheiss, J. (2023). Regularization and Model Selection for Item-on-Items Regression with Applications to Food Products' Survey Data. *Preprint on Arxiv*.
+* Hoshiyar, A., Gertheiss, L.H., and Gertheiss, J. (2023). Regularization and model selection for item-on-items regression with applications to food products' survey data. Preprint, available from https://arxiv.org/abs/2309.16373.
 
 * Sweeney, E., C. Crainiceanu, and J. Gertheiss (2015). Testing differentially expressed genes in dose-response studies and with ordinal phenotypes. *Statistical Applications in Genetics and Molecular Biology 15*, 213-235.
 
